# ModelExtrasSourceCode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ModelExtras.sln  ModelExtras.vcxproj  ModelExtras.vcxproj.filters  compile_commands.json  todo.txt  vcpkg.json  xmake.lua
include/coreutils/imgui/fonts/: fontmgr.cpp
include/coreutils/imgui/rw/: imgui_impl_rw.cpp  renderhook.cpp
src/: ModelExtrasAPI.cpp  ModelExtrasAPI.h  defines.h  dllmain.cpp  donation.cpp  pch.cpp  pch.h
src/enums/: featurematrix.h  lighttype.h  parenttype.cpp  parenttype.h
src/features/: audiomgr.cpp  audiomgr.h  datamgr.cpp  datamgr.h  meevents.h  mgr.cpp  mgr.h  modelinfomgr.cpp  modelinfomgr.h  util.cpp
src/features/common/: remap.cpp  remap.h
src/features/ped/: ganghands.cpp  pedcols.cpp  pedcols.h  remap.cpp  remap.h
src/features/vehicle/: backfire.cpp  backfire.h  brakes.cpp  carcols.cpp  carcols.h  exhaust.cpp  exhausts.h  gauge.cpp  gear.cpp  handlebar.cpp  leds.cpp  lights.cpp  lights.h  meter.cpp  meter.h  plate.cpp  rollbackbed.cpp  roof.cpp  roof.h  rotatedoor.cpp  rotatedoor.h  sirens.cpp  slidedoor.cpp  slidedoor.h  soundeffects.cpp  spoiler.cpp  spoiler.h  spotlights.cpp  steerwheel.cpp  steerwheel.h  wheel.cpp  wheelhub.cpp  wheelhub.h
src/features/vehicle/core/: colors.h  dummy.cpp  dummy.h  dummyconfig.h  fileconverter.cpp
src/features/weapon/: bodystate.h
src/trainer/: lightstab.cpp  trainer.cpp
src/utils/: frame.cpp  frame.h  hash.hpp  matrix.cpp  matrix.h  render.cpp  render.h  util.cpp  util.h  weaponextender.h
src/view/: hooks.cpp  lightstab.cpp  trainer.cpp  vehframeview.hpp  vehinspector.cpp  window.cpp
src/view/tabs/: editor.cpp  lights.cpp  status.cpp
src/view/tabs/modules/: IEditor.hpp  brakegear.hpp  door.hpp  exhaust.hpp  light.hpp  metadata.hpp  raw.hpp  roof.hpp  sirens.hpp  spoiler.hpp
tools/: PackAll7z.bat  Setup.bat  debug.sh  premake5 copy.lua  premake5.lua  release.sh
